--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 </head>
 <body>
 
-<h3>eekh.com</h3>
+<h3>eekh</h3>
 
 <div class="container">
     <form method="POST" name="google-sheet" id="google-sheet-form">
