--- a/index.html
+++ b/index.html
@@ -66,8 +66,10 @@
 <body>
 
 <h3>eekh
-  Thank you for contacting eekh
-  You will get Rs.100 of </h3>
+  
+  You will get Rs.100 off </h3>
+
+<h3>Thank you for contacting eekh </h3>
 
 <div class="container">
     <form method="POST" name="google-sheet" id="google-sheet-form">
