--- a/index.html
+++ b/index.html
@@ -65,11 +65,9 @@
 </head>
 <body>
 
-<h3>eekh
-  
-  You will get Rs.100 off </h3>
-
-<h3>Thank you for contacting eekh </h3>
+<h3>Thank you for contacting eekh</h3>
+<h3>Please Fill the Below Feilds</h3>
+<h3>You will get Rs.100 off</h3>
 
 <div class="container">
     <form method="POST" name="google-sheet" id="google-sheet-form">
