--- a/index.html
+++ b/index.html
@@ -85,6 +85,15 @@
     </form>
 
     <div id="message"></div>
+
+
+  <img src="cake1.jpeg" alt="image" style="width:49%; margin-top:5px;"> <img src="cake2.jpeg" alt="image" style="width:49%; margin-top:5px;">
+  
+  <img src="cake3.jpeg" alt="image" style="width:49%; margin-top:2px;"> <img src="cake4.jpeg" alt="image" style="width:49%; margin-top:2px;">
+  
+  <img src="cake5.jpeg" alt="image" style="width:49%; margin-top:2px;">
+
+
 </div>
 
 
