--- a/cake.html
+++ b/cake.html
@@ -67,22 +67,22 @@
     <!-- <div class="container"> -->
     <h3><pre>  Cake</pre></h3>
     <hr>
-    <img src="cake/cake1.jpeg" alt="image" style="width:49%; margin-top:5px;"> <img src="cake/cake2.jpeg" alt="image" style="width:49%; margin-top:5px;">
-    <img src="cake/cake3.jpeg" alt="image" style="width:49%; margin-top:2px;"> <img src="cake/cake4.jpeg" alt="image" style="width:49%; margin-top:2px;">
-    <img src="cake/cake10.jpg" alt="image" style="width:49%; margin-top:2px;"> <img src="cake/cake9.jpg" alt="image" style="width:49%; margin-top:2px;">
-    <img src="cake/cake6.jpg" alt="image" style="width:49%; margin-top:2px;"> <img src="cake/cake7.jpg" alt="image" style="width:49%; margin-top:2px;">
-    <img src="cake/cake12.jpg" alt="image" style="width:49%; margin-top:2px;"> <img src="cake/cake14.jpg" alt="image" style="width:49%; margin-top:2px;">
+    <img src="cake1.jpeg" alt="image" style="width:49%; margin-top:5px;"> <img src="cake2.jpeg" alt="image" style="width:49%; margin-top:5px;">
+    <img src="cake3.jpeg" alt="image" style="width:49%; margin-top:2px;"> <img src="cake4.jpeg" alt="image" style="width:49%; margin-top:2px;">
+    <img src="cake10.jpg" alt="image" style="width:49%; margin-top:2px;"> <img src="cake9.jpg" alt="image" style="width:49%; margin-top:2px;">
+    <img src="cake6.jpg" alt="image" style="width:49%; margin-top:2px;"> <img src="cake7.jpg" alt="image" style="width:49%; margin-top:2px;">
+    <img src="cake12.jpg" alt="image" style="width:49%; margin-top:2px;"> <img src="cake14.jpg" alt="image" style="width:49%; margin-top:2px;">
     
     <hr>
 
     
     <h3><pre>  Layer Cake</pre></h3>
     <hr>
-    <img src="cake/cake32.jpg" alt="image" style="width:49%; margin-top:2px;"> <img src="cake/cake36.jpg" alt="image" style="width:49%; margin-top:2px;">
-    <img src="cake/cake33.jpg" alt="image" style="width:49%; margin-top:2px;"> <img src="cake/cake5.jpeg" alt="image" style="width:49%; margin-top:2px;">
-    <img src="cake/cake30.jpg" alt="image" style="width:49%; margin-top:2px;"> <img src="cake/cake35.jpg" alt="image" style="width:49%; margin-top:2px;">
-    <img src="cake/cake34.jpg" alt="image" style="width:49%; margin-top:2px;"> <img src="cake/cake37.jpg" alt="image" style="width:49%; margin-top:2px;">
-    <img src="cake/cake38.jpg" alt="image" style="width:49%; margin-top:2px;"> 
+    <img src="cake32.jpg" alt="image" style="width:49%; margin-top:2px;"> <img src="cake36.jpg" alt="image" style="width:49%; margin-top:2px;">
+    <img src="cake33.jpg" alt="image" style="width:49%; margin-top:2px;"> <img src="cake5.jpeg" alt="image" style="width:49%; margin-top:2px;">
+    <img src="cake30.jpg" alt="image" style="width:49%; margin-top:2px;"> <img src="cake35.jpg" alt="image" style="width:49%; margin-top:2px;">
+    <img src="cake34.jpg" alt="image" style="width:49%; margin-top:2px;"> <img src="cake37.jpg" alt="image" style="width:49%; margin-top:2px;">
+    <img src="cake38.jpg" alt="image" style="width:49%; margin-top:2px;"> 
     <hr>
     <h3><pre>  Anniversary Cake</pre></h3>
     <hr>
