--- a/cake.html
+++ b/cake.html
@@ -86,23 +86,23 @@
     <hr>
     <h3><pre>  Anniversary Cake</pre></h3>
     <hr>
-  <img src="cake/cake16.jpg" alt="image" style="width:49%; margin-top:2px;"> <img src="cake/cake11.jpg" alt="image" style="width:49%; margin-top:2px;">
-    <img src="cake/cake15.jpg" alt="image" style="width:49%; margin-top:2px;"> 
+  <img src="cake16.jpg" alt="image" style="width:49%; margin-top:2px;"> <img src="cake11.jpg" alt="image" style="width:49%; margin-top:2px;">
+    <img src="cake15.jpg" alt="image" style="width:49%; margin-top:2px;"> 
     <hr>
     <h3><pre>  Girls Cake</pre></h3>
     <hr>
-  <img src="cake/cake31.jpg" alt="image" style="width:49%; margin-top:2px;"> <img src="cake/cake42.jpg" alt="image" style="width:49%; margin-top:2px;">
-    <img src="cake/cake18.jpg" alt="image" style="width:49%; margin-top:2px;"> <img src="cake/cake19.jpg" alt="image" style="width:49%; margin-top:2px;">
+  <img src="cake31.jpg" alt="image" style="width:49%; margin-top:2px;"> <img src="cake42.jpg" alt="image" style="width:49%; margin-top:2px;">
+    <img src="cake18.jpg" alt="image" style="width:49%; margin-top:2px;"> <img src="cake19.jpg" alt="image" style="width:49%; margin-top:2px;">
     <hr>
     <h3><pre>  Boys Cake</pre></h3>
     <hr>
-  <img src="cake/cake39.jpg" alt="image" style="width:49%; margin-top:2px;"> <img src="cake/cake29.jpg" alt="image" style="width:49%; margin-top:2px;">
-  <img src="cake/cake8.jpg" alt="image" style="width:49%; margin-top:2px;"> <img src="cake/cake24.jpg" alt="image" style="width:49%; margin-top:2px;">
-  <img src="cake/cake41.jpg" alt="image" style="width:49%; margin-top:2px;"> <img src="cake/cake40.jpg" alt="image" style="width:49%; margin-top:2px;"> 
-   <img src="cake/cake28.jpg" alt="image" style="width:49%; margin-top:2px;"> 
+  <img src="cake39.jpg" alt="image" style="width:49%; margin-top:2px;"> <img src="cake29.jpg" alt="image" style="width:49%; margin-top:2px;">
+  <img src="cake8.jpg" alt="image" style="width:49%; margin-top:2px;"> <img src="cake24.jpg" alt="image" style="width:49%; margin-top:2px;">
+  <img src="cake41.jpg" alt="image" style="width:49%; margin-top:2px;"> <img src="ccake40.jpg" alt="image" style="width:49%; margin-top:2px;"> 
+   <img src="cake28.jpg" alt="image" style="width:49%; margin-top:2px;"> 
     <hr>
     <h3><pre>  Photo Cake</pre></h3>
     <hr>
-  <img src="cake/cake20.jpg" alt="image" style="width:49%; margin-top:2px;"> <img src="cake/cake22.jpg" alt="image" style="width:49%; margin-top:2px;">
-    <img src="cake/cake21.jpg" alt="image" style="width:49%; margin-top:2px;"> <img src="cake/cake23.jpg" alt="image" style="width:49%; margin-top:2px;">
+  <img src="cake20.jpg" alt="image" style="width:49%; margin-top:2px;"> <img src="cake22.jpg" alt="image" style="width:49%; margin-top:2px;">
+    <img src="cake21.jpg" alt="image" style="width:49%; margin-top:2px;"> <img src="cake23.jpg" alt="image" style="width:49%; margin-top:2px;">
 <!-- </div> -->
