--- a/pizza.html
+++ b/pizza.html
@@ -9,7 +9,7 @@
     <hr>
     <h1>Pizza</h1>
     <hr>
-    <img src="pizza/pizza1.jpg" alt="image">
+    <img src="pizza1.jpg" alt="image">
     
     
 </body>
