--- a/cake.html
+++ b/cake.html
@@ -98,7 +98,7 @@
     <hr>
   <img src="cake39.jpg" alt="image" style="width:49%; margin-top:2px;"> <img src="cake29.jpg" alt="image" style="width:49%; margin-top:2px;">
   <img src="cake8.jpg" alt="image" style="width:49%; margin-top:2px;"> <img src="cake24.jpg" alt="image" style="width:49%; margin-top:2px;">
-  <img src="cake41.jpg" alt="image" style="width:49%; margin-top:2px;"> <img src="ccake40.jpg" alt="image" style="width:49%; margin-top:2px;"> 
+  <img src="cake41.jpg" alt="image" style="width:49%; margin-top:2px;"> <img src="cake40.jpg" alt="image" style="width:49%; margin-top:2px;"> 
    <img src="cake28.jpg" alt="image" style="width:49%; margin-top:2px;"> 
     <hr>
     <h3><pre>  Photo Cake</pre></h3>
